# tau-ceti-tracker

./: .gitignore  CLAUDE.md  README.md  auth.py  database.py  main.py  models.py  pyproject.toml
frontend/: index.html
frontend/src/: App.css  App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: AddRunForm.css  AddRunForm.jsx  EditRunModal.css  EditRunModal.jsx  Header.css  Header.jsx  Login.css  Login.jsx  RunsTable.css  RunsTable.jsx  StatsPanel.css  StatsPanel.jsx
routes/: runs.py
tests/: test_runs.py
