[project]
name = "tau-ceti-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "authlib>=1.7.0",
    "fastapi[standard]>=0.135.3",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.49",
]
